Tests/CompilerTests/negative/generic-requirement.expected
negative/generic-requirement.hylo:11.1-6: error: no implementation of 'f(_:)'
given<T> S<T>: P {
~~~~~
